Added password strength meter

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <form>
         <label for="length">Enter lenght of password<span> * </span>:</label>
         <input type="number" name="length" id="length"><br>
-        <input type="button" value="Generate" onclick="generate()">
+        <input type="button" value="Generate" id="button" onclick="generate()">
     </form>
     <div id="output">Your password will appear here</div>
+    <div id="passwdStrength"></div>
     <script src="index.js"></script>
 </body>
 
