--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Random Password Generator</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Random Password Generator</h1>
-    <hr>
+    <hr />
     <form>
-        <label for="length">Enter lenght of password<span> * </span>:</label>
-        <input type="number" name="length" id="length"><br>
-        <input type="button" value="Generate" id="button" onclick="generate()">
+      <label for="length">Enter lenght of password<span> * </span>:</label>
+      <input type="number" name="length" id="length" /><br />
+      <input type="button" value="Generate" id="button" onclick="generate()" />
     </form>
     <div id="output">Your password will appear here</div>
     <div id="passwdStrength"></div>
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
