Refactored the js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr />
     <form>
       <label for="length">Enter lenght of password<span>*</span>:</label>
-      <input type="text" name="length" id="length" inputmode="numeric"/><br />
+      <input type="number" name="length" id="length" inputmode="numeric"/><br />
       <input type="button" value="Generate" id="button" onclick="generate()" />
     </form>
     <div id="output">Your password will appear here</div>
